@@ -171,35 +171,6 @@
     margin-inline-start: 1em;
   }
 
-  // A completely unstyled button
-  &.unbutton {
-    border-radius: 0;
-    width: auto;
-    height: auto;
-    padding: 0;
-    font-size: inherit;
-    font-weight: normal;
-    vertical-align: middle;
-    display: inline;
-    background-color: transparent;
-    border: 0;
-    color: inherit;
-    text-decoration: none;
-    white-space: nowrap;
-    position: relative;
-    overflow: hidden;
-    box-sizing: border-box;
-    -webkit-font-smoothing: auto;
-    // stylelint-disable-next-line property-no-vendor-prefix
-    -moz-appearance: none;
-
-    &:hover,
-    &:focus,
-    &:active {
-      background-color: transparent;
-    }
-  }
-
   // stylelint-disable-next-line no-duplicate-selectors
   &:hover {
     background-color: $color-button-hover;
